syntax = "proto3";

package userservice;

option go_package = "./pkg/pb";

service UserService {
    rpc GetUserByID (UserIDRequest) returns (UserResponse);
    rpc GetUsersByIDs (UserIDsRequest) returns (UsersResponse);
    rpc SearchUsers (SearchRequest) returns (UsersResponse);
    rpc AddUser (AddUserRequest) returns (AddUserResponse);
}

message UserIDRequest {
    int64 id = 1;
}

message UserIDsRequest {
    repeated int64 ids = 1;
}

message SearchRequest {
    string city = 1;
    string phone = 2;
    bool married = 3;
}

message AddUserRequest {
    Users user = 1;
}

message AddUserResponse {}

message Users {
    string fname = 1;
    string city = 2;
    string phone = 3;
    float height = 4;
    bool married = 5;
}

message User {
    int64 id = 1;
    string fname = 2;
    string city = 3;
    string phone = 4;
    float height = 5;
    bool married = 6;
}

message UserResponse {
    User user = 1;
}

message UsersResponse {
    repeated User users = 1;
}
